--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -27,8 +27,8 @@
                     <p class="card-text">{{post.content|slice:":200" }}</p>
                     <a href="{% url 'post_detail' post.pk  %}" class="btn btn-blog">Read More <i class="fas fa-angle-double-right"></i> </a>
                     {% if request.user.is_superuser %}
-                    <a href="{% url 'edit_post' post.pk  %}" class="btn btn-blog">Edit Post</a>
-                    <a href="{% url 'delete_post' post.pk  %}" class="btn btn-blog">Delete Post</a>
+                    <a href="{% url 'edit_post' post.pk  %}" class="btn btn-blog">Edit Post <i class="fas fa-angle-double-right"></i></a>
+                    <a href="{% url 'delete_post' post.pk  %}" class="btn btn-blog">Delete Post <i class="fas fa-angle-double-right"></i></a>
                     {% endif %}
                 </div>
             </div>
