--- a/blog/templates/blog/edit_post.html
+++ b/blog/templates/blog/edit_post.html
@@ -31,8 +31,8 @@
                     {% endif %}
                 {% endfor %}
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'blog' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Update Post</button>
+                    <a class="btn rounded-0" href="{% url 'blog' %}">Cancel</a>
+                    <button class="btn rounded-0" type="submit">Update Post</button>
                 </div>
             </form>
         </div>            
