--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -12,8 +12,8 @@
         <p class="card-text ">{{ object.content | safe }}</p>
         <a href="{% url 'blog' %}" class="btn btn-blog"><i class="fas fa-angle-double-left"></i> Back to blogposts</a>
         {% if request.user.is_superuser %}
-        <a href="{% url 'edit_post' post.pk %}" class="btn btn-primary">Edit Post</a>
-        <a href="{% url 'delete_post' post.pk  %}" class="btn btn-primary">Delete Post</a>
+        <a href="{% url 'edit_post' post.pk %}" class="btn btn-blog">Edit Post <i class="fas fa-angle-double-right"></i></a>
+        <a href="{% url 'delete_post' post.pk  %}" class="btn btn-blog">Delete Post <i class="fas fa-angle-double-right"></i></a>
         {% endif %}
       </div>
     </div>
