--- a/products/templates/products/delete_product.html
+++ b/products/templates/products/delete_product.html
@@ -16,7 +16,7 @@
     <div class="row">
         <div class="col-md-8 mx-auto">
                 <h2 class="sub-heading mb-4 text-center">Delete Product</h2>
-                <h2 class="text-center">Are you sure you want to delete:<br><br><strong>{{ product.name }}</strong>?</h2>
+                <h2 class="text-center">Are you sure you want to delete:<br><strong>{{ product.name }}</strong>?</h2>
                 <br>
                 <h3 class="text-center"><i class="fas fa-angle-double-right"></i>this can't be undone<i class="fas fa-angle-double-left"></i></h3>
         </div>
