--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -8,9 +8,10 @@
         <div class="row h-100">
             <div class="col-7 col-md-6 my-auto">
             
-                <h1 class="display-4 heading text-center">
+                <h1 class="display-3 heading text-center">
                     Peru Collection
                 </h1>
+                <h2 class="text-center mt-2">- Alpaca Wool Blankets -</h2>
                 
                 <div class="my-5 text-center">
                     <h4>
@@ -26,7 +27,7 @@
     <div class="container-fluid bg-white">
         <div class="row">
             <div class="col">
-                <h3 class="mb-4 mt-4 text-center">From global artisans to your home</h3>
+                <h3 class="mb-4 mt-4 text-center lead">From global artisans to your home</h3>
             </div>
         </div>
     </div>
