--- a/static/css/base.css
+++ b/static/css/base.css
@@ -12,6 +12,9 @@ body {
     position: relative;
 }
 
+h1 {
+    letter-spacing: 2px;
+}
 h2{
     font-size: 20px;
     letter-spacing: 2px;
@@ -20,7 +23,7 @@ h2{
 
 h3{
     font-size: 18px;
-    letter-spacing: 6px;
+    letter-spacing: 5px;
     font-weight: 200;
 }
 
